# RewardsMaximizer

./: .gitignore  Credit_Card_Rewards.html  Dockerfile  README.md  database.py  package.json  rewards_maximizer.db  scraper.py  styles.css  wallet.html
Backend/RewardsMaxAPI/: Cargo.toml
Backend/RewardsMaxAPI/JSON Examples/: new_user.json
Backend/RewardsMaxAPI/database/: rewards_maximizer.db  rewards_maximizer.sqbpro
Backend/RewardsMaxAPI/migrations/2024-10-30-221200_create_cards/: up.sql
Backend/RewardsMaxAPI/src/: main.rs  users.rs  web.rs
Backend/RewardsMaxAPI/src/web/: app.rs  auth.rs  card.rs  companies.rs  crowdsourcing.rs  index.rs  info.rs  lib.rs  models.rs  protected.rs  schema.rs  user.rs  vendor_deals.rs
Backend/RewardsMaxAPI/templates/: index.html  login.html
Frontend/: Ember.js  crowdsourcing.html  login.html  package-lock.json  package.json  search.html  search_results.html  styles.css  wallet.html
Frontend/RM_HTML_Pages/: styles.css
Frontend/app/: router.js
Frontend/app/components/: dropdown-menu.hbs  dropdown-menu.js
Frontend/app/controllers/: card-details.js  crowdsourcing.js  home.js  login.js  profile.js  registration.js  search-results.js  search.js  wallet.js
Frontend/app/helpers/: category-icon.js
RewardsMaxAPI/: .env  Cargo.toml
RewardsMaxAPI/JSON Examples/: new_user.json
RewardsMaxAPI/database/: db.db
RewardsMaxAPI/src/: main.rs  web.rs
_layouts/: default.html  glossary.html  labs.html  presentations.html  references.html  team-bio.html
scraper/: database.py  rewards_maximizer.db  scraper.py
(+27 files in other folders)
