[package]
name = "Rewards-Maximizer-API"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
debug = true

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.74"
axum = "0.7.0"
axum-login = { version = "0.16" }
axum-messages = "0.7.0"
http = "1.0.0"
hyper = "1.0.1"
r2d2 = "0.8.10"
password-auth = "1.0.0"
serde = "1"
sqlx = { version = "0.8.1", features = ["sqlite", "time", "runtime-tokio"] }
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-sessions = { version = "0.13.0", default-features = false, features = [
    "signed",
] }
tower-sessions-sqlx-store = { version = "0.14.0", features = ["sqlite"] }
thiserror = "1.0.56"
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "r2d2", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tower-http = {version = "0.6.1", features=["fs", "cors"]}
argon2 = "0.5" 
rand = "0.8"